--- a/Views/permisos_solicitados/Gestion.cshtml
+++ b/Views/permisos_solicitados/Gestion.cshtml
@@ -1,46 +1,51 @@
 ﻿@model IEnumerable<DataBase_RH_BanderaBlanca.Models.permisos_solicitados>
 
 @{
-    ViewBag.Title = "Gestion";
+    ViewBag.Title = "Gestión de Permisos Solicitados";
 }
 
-<h2>Index</h2>
+<div class="row">
+    <div class="col-12 col-lg-12 col-xxl-12 d-flex">
+        <div class="card flex-fill">
+            <div class="card-header">
+                <h5 class="card-title mb-0">Permisos Solicitados</h5>
+            </div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Detalle_Permiso)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fecha_Solicitud)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.observacion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.estados_solicitudes.Estados_Solicitud)
-        </th>
-    </tr>
+            <!-- Contenedor principal -->
+            <div class="container mt-4 pb-5">
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Detalle_Permiso)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fecha_Solicitud)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.observacion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.estados_solicitudes.Estados_Solicitud)
-            </td>
-        </tr>
-    }
+                <!-- Encabezado con botón para crear -->
+                <div class="d-flex justify-content-between align-items-center mb-4">
+                    <h2 class="mb-0">Lista de Permisos</h2>
+                    <a href="@Url.Action("Create")" class="btn btn-success">Crear Nueva Solicitud</a>
+                </div>
 
-</table>
+                <!-- Tabla responsiva -->
+                <div class="table-responsive">
+                    <table class="table my-0 table-hover">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>@Html.DisplayNameFor(model => model.Detalle_Permiso)</th>
+                                <th>@Html.DisplayNameFor(model => model.Fecha_Solicitud)</th>
+                                <th>@Html.DisplayNameFor(model => model.Observacion)</th>
+                                <th>@Html.DisplayNameFor(model => model.estados_solicitudes.Estados_Solicitud)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@Html.DisplayFor(modelItem => item.Detalle_Permiso)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Fecha_Solicitud)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Observacion)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.estados_solicitudes.Estados_Solicitud)</td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
