--- a/Views/vacaciones/Gestion.cshtml
+++ b/Views/vacaciones/Gestion.cshtml
@@ -44,7 +44,7 @@
                             <tr>
                                 <th>@Html.DisplayNameFor(model => model.Cantidad_Dias)</th>
                                 <th>@Html.DisplayNameFor(model => model.Fecha_Solicitud)</th>
-                                <th>@Html.DisplayNameFor(model => model.observacion)</th>
+                                <th>@Html.DisplayNameFor(model => model.Observacion)</th>
                                 <th>@Html.DisplayNameFor(model => model.estados_solicitudes.Estados_Solicitud)</th>
                             </tr>
                         </thead>
@@ -54,7 +54,7 @@
                                 <tr>
                                     <td>@Html.DisplayFor(modelItem => item.Cantidad_Dias)</td>
                                     <td>@Html.DisplayFor(modelItem => item.Fecha_Solicitud)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.observacion)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Observacion)</td>
                                     <td>@Html.DisplayFor(modelItem => item.estados_solicitudes.Estados_Solicitud)</td>
                                 </tr>
                             }
