--- a/Views/horas_extras/Gestion.cshtml
+++ b/Views/horas_extras/Gestion.cshtml
@@ -1,64 +1,57 @@
 ﻿@model IEnumerable<DataBase_RH_BanderaBlanca.Models.horas_extras>
 
 @{
-    ViewBag.Title = "Gestion";
+    ViewBag.Title = "Gestión de Horas Extras";
 }
 
-<h2>Index</h2>
+<div class="row">
+    <div class="col-12 col-lg-12 col-xxl-12 d-flex">
+        <div class="card flex-fill">
+            <div class="card-header">
+                <h5 class="card-title mb-0">Horas Extras</h5>
+            </div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Cantidad_Horas)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Detalle_Hora_Extra)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Monto_HoraExtra)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.observacion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.hizoHoras)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.aprobada)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.catalogo_horas_extras.Tipo_Hora_Extra)
-        </th>
-    </tr>
+            <!-- Contenedor principal -->
+            <div class="container mt-4 pb-5">
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cantidad_Horas)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Detalle_Hora_Extra)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Monto_HoraExtra)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.observacion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.hizoHoras)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.aprobada)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.catalogo_horas_extras.Tipo_Hora_Extra)
-            </td>
-        </tr>
-    }
+                <!-- Encabezado con botón para crear -->
+                <div class="d-flex justify-content-between align-items-center mb-4">
+                    <h2 class="mb-0">Lista de Horas Extras</h2>
+                    <a href="@Url.Action("Create")" class="btn btn-success">Crear Nueva Hora Extra</a>
+                </div>
 
-</table>
+                <!-- Tabla responsiva -->
+                <div class="table-responsive">
+                    <table class="table my-0 table-hover">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>@Html.DisplayNameFor(model => model.Cantidad_Horas)</th>
+                                <th>@Html.DisplayNameFor(model => model.Detalle_Hora_Extra)</th>
+                                <th>@Html.DisplayNameFor(model => model.Monto_HoraExtra)</th>
+                                <th>@Html.DisplayNameFor(model => model.Observacion)</th>
+                                <th>@Html.DisplayNameFor(model => model.Aprobada)</th>
+                                <th>@Html.DisplayNameFor(model => model.HizoHoras)</th>
+                                <th>@Html.DisplayNameFor(model => model.catalogo_horas_extras.Tipo_Hora_Extra)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@Html.DisplayFor(modelItem => item.Cantidad_Horas)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Detalle_Hora_Extra)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Monto_HoraExtra)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Observacion)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Aprobada)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.HizoHoras)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.catalogo_horas_extras.Tipo_Hora_Extra)</td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
