--- a/Views/horas_extras/Index.cshtml
+++ b/Views/horas_extras/Index.cshtml
@@ -17,7 +17,6 @@
                 <!-- Encabezado con botón para crear -->
                 <div class="d-flex justify-content-between align-items-center mb-4">
                     <h2 class="mb-0">Lista de Horas Extras</h2>
-                    <a href="@Url.Action("Create")" class="btn btn-success">Crear Nueva Hora Extra</a>
                 </div>
 
                 <!-- Tabla responsiva -->
@@ -28,9 +27,9 @@
                                 <th>@Html.DisplayNameFor(model => model.Cantidad_Horas)</th>
                                 <th>@Html.DisplayNameFor(model => model.Detalle_Hora_Extra)</th>
                                 <th>@Html.DisplayNameFor(model => model.Monto_HoraExtra)</th>
-                                <th>@Html.DisplayNameFor(model => model.observacion)</th>
-                                <th>@Html.DisplayNameFor(model => model.aprobada)</th>
-                                <th>@Html.DisplayNameFor(model => model.hizoHoras)</th>
+                                <th>@Html.DisplayNameFor(model => model.Observacion)</th>
+                                <th>@Html.DisplayNameFor(model => model.Aprobada)</th>
+                                <th>@Html.DisplayNameFor(model => model.HizoHoras)</th>
                                 <th>@Html.DisplayNameFor(model => model.catalogo_horas_extras.Tipo_Hora_Extra)</th>
                                 <th class="text-right">Acciones</th>
                             </tr>
@@ -42,9 +41,9 @@
                                     <td>@Html.DisplayFor(modelItem => item.Cantidad_Horas)</td>
                                     <td>@Html.DisplayFor(modelItem => item.Detalle_Hora_Extra)</td>
                                     <td>@Html.DisplayFor(modelItem => item.Monto_HoraExtra)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.observacion)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.aprobada)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.hizoHoras)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Observacion)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Aprobada)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.HizoHoras)</td>
                                     <td>@Html.DisplayFor(modelItem => item.catalogo_horas_extras.Tipo_Hora_Extra)</td>
                                     <td class="text-right">
                                         @Html.ActionLink("Editar", "Edit", new { idDate = item.Fecha_HoraExtra, idTipoHora = item.idCatalogo_Horas_Extras, idEmpleado = item.idEmpleado }, new { @class = "btn btn-primary btn-sm" })
