--- a/Views/permisos_solicitados/Index.cshtml
+++ b/Views/permisos_solicitados/Index.cshtml
@@ -17,7 +17,6 @@
                 <!-- Encabezado con botón para crear -->
                 <div class="d-flex justify-content-between align-items-center mb-4">
                     <h2 class="mb-0">Lista de Permisos</h2>
-                    <a href="@Url.Action("Create")" class="btn btn-success">Crear Nueva Solicitud</a>
                 </div>
 
                 <!-- Tabla responsiva -->
@@ -27,7 +26,7 @@
                             <tr>
                                 <th>@Html.DisplayNameFor(model => model.Detalle_Permiso)</th>
                                 <th>@Html.DisplayNameFor(model => model.Fecha_Solicitud)</th>
-                                <th>@Html.DisplayNameFor(model => model.observacion)</th>
+                                <th>@Html.DisplayNameFor(model => model.Observacion)</th>
                                 <th>@Html.DisplayNameFor(model => model.estados_solicitudes.Estados_Solicitud)</th>
                                 <th class="text-right">Acciones</th>
                             </tr>
@@ -38,7 +37,7 @@
                                 <tr>
                                     <td>@Html.DisplayFor(modelItem => item.Detalle_Permiso)</td>
                                     <td>@Html.DisplayFor(modelItem => item.Fecha_Solicitud)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.observacion)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Observacion)</td>
                                     <td>@Html.DisplayFor(modelItem => item.estados_solicitudes.Estados_Solicitud)</td>
                                     <td class="text-right">
                                         @Html.ActionLink("Editar", "Edit", new { date = item.Fecha_Permiso, idEmpleado = item.idEmpleado }, new { @class = "btn btn-primary btn-sm" })
