--- a/Views/sucursales/Create.cshtml
+++ b/Views/sucursales/Create.cshtml
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
 <div class="form-horizontal">
     <h4>sucursales</h4>
     <hr />
@@ -35,7 +35,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.direcciones_Empresas.idProvincia, "Provincia", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.direcciones_Empresas.idProvincia, (SelectList)ViewBag.Provincias, "Seleccione una provincia", new { @class = "form-control", @onchange = "CambiarProvincia();", ID = "Provincias" })
+            @Html.DropDownListFor(model => model.direcciones_Empresas.idProvincia, (SelectList)ViewBag.Provincias, "Seleccione una provincia", new { @class = "form-control", @onchange = "CambiarProvincia();", id = "Provincias" })
             @Html.ValidationMessageFor(model => model.direcciones_Empresas.idProvincia, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -43,7 +43,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.direcciones_Empresas.idCanton, "Cantón", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.direcciones_Empresas.idCanton, (SelectList)ViewBag.Cantones, "Seleccione un cantón", new { @class = "form-control", @onchange = "CambiarCanton();", ID = "Cantones" })
+            @Html.DropDownListFor(model => model.direcciones_Empresas.idCanton, new SelectList(Enumerable.Empty<SelectListItem>(), "Value", "Text"), "Seleccione un cantón", new { @class = "form-control", @onchange = "CambiarCanton();", id = "Cantones" })
             @Html.ValidationMessageFor(model => model.direcciones_Empresas.idCanton, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -51,7 +51,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.direcciones_Empresas.idDistrito, "Distrito", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.direcciones_Empresas.idDistrito, (SelectList)ViewBag.Distritos, "Seleccione un distrito", new { @class = "form-control", @ID = "Distritos" })
+            @Html.DropDownListFor(model => model.direcciones_Empresas.idDistrito, new SelectList(Enumerable.Empty<SelectListItem>(), "Value", "Text"), "Seleccione un distrito", new { @class = "form-control", id = "Distritos" })
             @Html.ValidationMessageFor(model => model.direcciones_Empresas.idDistrito, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -102,5 +102,43 @@
 </div>
 
 @section Scripts {
+
     @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        function CambiarProvincia() {
+            const provinciaId = $('#Provincias').val();
+            $('#Cantones').empty().append('<option value="">Seleccione un cantón</option>');
+            $('#Distritos').empty().append('<option value="">Seleccione un distrito</option>');
+
+            if (provinciaId) {
+                $.getJSON('/sucursales/ObtenerCantones', { idProvincia: provinciaId }, function (data) {
+                    $.each(data, function (index, item) {
+                        $('#Cantones').append($('<option>', {
+                            value: item.id,
+                            text: item.nombre
+                        }));
+                    });
+                });
+            }
+        }
+
+        function CambiarCanton() {
+            const cantonId = $('#Cantones').val();
+            $('#Distritos').empty().append('<option value="">Seleccione un distrito</option>');
+
+            if (cantonId) {
+                $.getJSON('/sucursales/ObtenerDistritos', { idCanton: cantonId }, function (data) {
+                    $.each(data, function (index, item) {
+                        $('#Distritos').append($('<option>', {
+                            value: item.id,
+                            text: item.nombre
+                        }));
+                    });
+                });
+            }
+        }
+    </script>
+
+
 }
+
